fix loaders alignement and sizing

--- a/src/assets/css/classes.scss
+++ b/src/assets/css/classes.scss
@@ -129,6 +129,9 @@
         .text {
            display: inline;
         }
+        mat-spinner{
+            height:40px;
+        }
     }
 }
 
